[project]
name = "langgraph-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
]
